# mirsdrapi-rsp-sys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
include/: mirsdrapi-rsp.h
pkgconfig/: mirsdrapi-rsp.pc
src/: bindings.rs  lib.rs
tests/: test_api_connection.rs
