[package]
name = "mirsdrapi-rsp-sys"
description = "Bindgen-generated thing wrapper around SDRplay Ltd's RSP control driver."
version = "2.13.1"
authors = ["italic <italic.rendezvous@gmail.com>"]
repository = "https://github.com/italic-r/mirsdrapi-rsp-sys"
edition = "2018"

build = "build.rs"
include = [
	"src/**/*",
	"tests/**/*",
	"Cargo.toml",
	"build.rs",
	"README.md",
	"LICENSE",
	"include/*",
	"pkgconfig/*",
]

publish = false
categories = ["external-ffi-bindings"]
keywords = ["sdr", "rsp", "sdrplay", "amateur", "radio"]
license-file = "LICENSE"
readme = "README.md"

[build-dependencies]
pkg-config = "^0.3.14"
bindgen = "*"
